chore: cleanup unused files and update gitignore
- Removed aa/ folder (temporary design zips)

- Removed debug scripts (check_db.py, test_login.py, etc.)

- Removed test output logs

- Removed build artifacts and dev logs

- Added patterns to .gitignore for build artifacts and test outputs

- Updated project files with latest changes

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ Thumbs.db
 # Temporary
 *.tmp
 *.temp
+
+# Build artifacts
+*.tsbuildinfo
+
+# Screenshots (regenerated via make screenshots)
+# Uncomment if you want to track screenshots in git:
+# !@fotos/
+
+# Test/debug outputs
+test_output*.txt
+test_sla*.txt
+test_tickets*.txt
