--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   postgres:
-    image: postgres:15-alpine
+    image: postgres:15
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -13,24 +13,24 @@ services:
     networks:
       - helpdesk_net
     ports:
-      - "${POSTGRES_PORT:-15432}:5432"
+      - "${POSTGRES_PORT:-15433}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 5
 
   redis:
-    image: redis:7-alpine
-    restart: unless-stopped
+    image: redis:7
+    restart: always
     networks:
       - helpdesk_net
     ports:
-      - "${REDIS_PORT:-16379}:6379"
+      - "${REDIS_PORT:-16380}:6379"
     volumes:
       - helpdesk_redisdata:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -49,10 +49,10 @@ services:
     networks:
       - helpdesk_net
     ports:
-      - "${API_PORT:-18000}:8000"
+      - "${API_PORT:-18001}:8000"
     volumes:
       - ../apps/api:/app
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
 
   worker:
     build:
@@ -65,7 +65,7 @@ services:
         condition: service_healthy
     networks:
       - helpdesk_net
-    command: ["python", "-m", "app.worker"]
+    command: [ "python", "-m", "app.worker" ]
 
   scheduler:
     build:
@@ -78,13 +78,13 @@ services:
         condition: service_healthy
     networks:
       - helpdesk_net
-    command: ["python", "-m", "app.scheduler"]
+    command: [ "python", "-m", "app.scheduler" ]
 
 volumes:
   helpdesk_pgdata:
-    name: helpdesk_pgdata
+    name: helpdesk_pgdata_v2
   helpdesk_redisdata:
-    name: helpdesk_redisdata
+    name: helpdesk_redisdata_v2
 
 networks:
   helpdesk_net:
